# sae-amortization

./: README.md  absorption.py  amortization.py  collect_activations.py  encode_latents.py  geometry.py  index_checkpoints.py  intervention_score.py  metrics.py  probes.py  pyproject.toml  requirements.txt  run_exp5.py  sae_io.py  select_latents_cli.py  tpp_shift.py  utils.py  visualize.py
configs/: collect_agnews.yaml
scripts/: 10_collect_agnews.sh  20_select_latents.sh  30_gis.sh  40_eval_dynamics_pythia.sh
